--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url(./vendor/normalize.css);
 @import url(./vendor/fonts.css);
+@import url(./blocks/body/body.css);
 @import url(./blocks/page/page.css);
 @import url(./blocks/page/_type/page_type_openedPopup.css);
 @import url(./blocks/button/button.css);
